test/fixtures/astRegression/shouldFail/Nullable.sand
pub class Nullable {
    foo(): String?? {
        
    }
}